--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
-    "build:prod": "ng build --configuration production",
+    "build:prod": "npx ng build --configuration production",
     "watch": "ng watch",
     "test": "ng test"
   },
@@ -51,3 +51,4 @@
     "autoprefixer": "^10.4.16"
   }
 }
+
